<resources>
    <string name="app_name">Test Application – Firebase</string>
    <string name="id">Enter your ID</string>
    <string name="name">Enter your Name</string>
    <string name="address">Enter your Address</string>
    <string name="contactno">Enter your Contact Number</string>
    <string name="save">SAVE</string>
    <string name="show">SHOW</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="hintname">Enter your name</string>
    <string name="hintId">Enter your ID</string>
    <string name="hintName">Enter your Name</string>
    <string name="hintAdd">Enter your Address</string>
    <string name="hintCon">Enter your Contact No</string>
    <string name="hintContel">Enter your Contact No</string>
</resources>
